--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,22 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <from>
+                        <image>
+                        registry.hub.docker.com/sreeteja07/samplewebapp
+                        </image>
+                    </from>
+                    <to>
+                        <image>registry.hub.docker.com/sreeteja07/samplewebapp</image>
+                    </to>
+
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <repositories>
