--- a/pom.xml
+++ b/pom.xml
@@ -64,13 +64,13 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
-                    <from>
+                    <!--<from>
                         <image>
                         registry.hub.docker.com/sreeteja07/samplewebapp
                         </image>
-                    </from>
+                    </from>-->
                     <to>
-                        <image>registry.hub.docker.com/sreeteja07/samplewebapp</image>
+                        <image>docker.io/dockerhub_id/samplewebapp</image>
                     </to>
 
                 </configuration>
