--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,22 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
+                  <from>
+                        <image>
+                        docker.io/sreeteja07/samplewebapp@sha256-d185d0e89e255423aebf2905ff8f3348fd7df2d8e493e88807c8caf02e9f2639
+                        </image>
+                    </from>
+                    <to>
+                        <image>registry.hub.docker.com/sreeteja07/samplewebapp</image>
+                    </to>
                     <!--<from>
                         <image>
                         registry.hub.docker.com/sreeteja07/samplewebapp
                         </image>
-                    </from>-->
+                    </from>
                     <to>
                         <image>docker.io/dockerhub_id/samplewebapp</image>
-                    </to>
+                    </to>-->
 
                 </configuration>
             </plugin>
