--- a/pom.xml
+++ b/pom.xml
@@ -68,10 +68,10 @@
                         <image>
                         docker.io/sreeteja07/samplewebapp@sha256-d185d0e89e255423aebf2905ff8f3348fd7df2d8e493e88807c8caf02e9f2639
                         </image>
-                    </from>
+                    </from>-->
                     <to>
                         <image>registry.hub.docker.com/sreeteja07/samplewebapp</image>
-                    </to>-->
+                    </to>
                   <auth>
                             <username>sreeteja07</username>
                             <password>docker@Sree</password>
