--- a/pom.xml
+++ b/pom.xml
@@ -72,10 +72,10 @@
                     <to>
                         <image>registry.hub.docker.com/sreeteja07/samplewebapp</image>
                     </to>
-                  <auth>
+                  <!--<auth>
                             <username>sreeteja07</username>
                             <password>docker@Sree</password>
-                        </auth>
+                        </auth>-->
                     <!--<from>
                         <image>
                         registry.hub.docker.com/sreeteja07/samplewebapp
