--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.devops4solutions</groupId>
   <artifactId>LoginWebApp</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>1</version>
   <name>LoginWebApp Maven Webapp</name>
   <url>http://maven.apache.org</url>
